--- a/styles.css
+++ b/styles.css
@@ -5,29 +5,35 @@ body {
 
 #level-title {
   font-family: 'Press Start 2P', cursive;
-  font-size: 3rem;
-  margin:  5%;
+  font-size: 2.5rem;
+  margin:  2%;
   color: #FEF2BF;
 }
 
 #start-button {
   font-family: 'Press Start 2P', cursive;
-  font-size: 2rem;
+  font-size: 1.5rem;
   padding: 20px;
 }
 
 #instructions-button {
   font-family: 'Press Start 2P', cursive;
-  font-size: 2rem;
+  font-size: 1.5rem;
   padding: 20px;
+}
+
+#instructions {
+  display: none;
+  font-family: 'Press Start 2P', cursive;
+  color: #FEF2BF;
 }
 
 .container {
   display: block;
   width: 50%;
   margin: auto;
-
 }
+
 
 .btn {
   margin: 25px;
